[project]
name = "personal-finance-advisor"
version = "0.1.0"
description = "Interactive personal finance auditor powered by PydanticAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "logfire>=4.0.0",
    "pandas>=3.0.0",
    "pydantic-ai>=1.0.0",
    "python-dotenv>=1.2.0",
    "sqlglot>=30.0.0",
    "streamlit>=1.58.0",
]
